--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -26,7 +26,12 @@
                 </div>
                 <button type="submit" class="btn btn-sm btn-primary">Add</button>
             </form>
-        <% } %>
+        <% } else { %>
+            <div class="alert alert-warning mt-3">
+                <strong>You must be logged in to comment.</strong>
+                <a href="/user/signin" class="btn btn-sm btn-outline-primary">Sign in</a>
+            </div>
+        <% } %>%>
         <div class="mt-3">
             <% comments.forEach(comment => { %>
                 <div>
